CBG - edits 5,2