@@ -2,42 +2,33 @@ plugins {
     kotlin("jvm") version "2.0.21"
     application
 }
-layout.buildDirectory.set(file("out"))
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    val ktor = "2.3.12"
-    implementation("io.ktor:ktor-server-core-jvm:$ktor")
-    implementation("io.ktor:ktor-server-netty-jvm:$ktor")
-    implementation("io.ktor:ktor-server-content-negotiation-jvm:$ktor")
-    implementation("io.ktor:ktor-serialization-jackson:$ktor")
-
-    implementation("com.squareup.okhttp3:okhttp:4.12.0")
-
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.17.1")
-
-    // DB: Exposed + SQLite (для MVP)
+    // DB
     implementation("org.jetbrains.exposed:exposed-core:0.53.0")
     implementation("org.jetbrains.exposed:exposed-dao:0.53.0")
     implementation("org.jetbrains.exposed:exposed-jdbc:0.53.0")
     implementation("org.xerial:sqlite-jdbc:3.46.0.0")
-    implementation("org.slf4j:slf4j-simple:2.0.13")
 
+    // HTTP + JSON + .env
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.17.2")
     implementation("io.github.cdimascio:dotenv-kotlin:6.4.1")
+
+    // Логи (чтобы не было NOP)
+    implementation("org.slf4j:slf4j-simple:2.0.13")
 
     testImplementation(kotlin("test"))
 }
 
+kotlin {
+    jvmToolchain(21)
+}
+
 application {
     mainClass.set("app.MainKt")
-    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
-
-tasks.test {
-    useJUnitPlatform()
-}
-
-
-kotlin { jvmToolchain(21) }
